tests/pass/matching/same order for binders2.mm0
    sort s ; 
    sort t ; 
term a (x : s) (y : t) : s ; 
