tests/fail/registering/duplicated id for terms.mm0
sort s;
sort t;
term a :s;
term a :t;
